# MEPhI-OOP2024

./: LICENSE  README.md
lab1/: CMakeLists.txt  lib.cpp  lib.h  main.cpp  rlib.cpp  rlib.h  tests.cpp
