cmake_minimum_required(VERSION 3.13)
project(ooplab1)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage")
find_package(Catch2 3 REQUIRED)
include_directories(${Catch2_INCLUDE_DIRS})
add_compile_options(-fprofile-arcs -ftest-coverage)
add_library(rlib rlib.h rlib.cpp)
link_libraries(rlib)
add_library(lib lib.h lib.cpp)
link_libraries(lib)
add_executable(main main.cpp)
add_executable(tests tests.cpp)
target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)